zmq_bindings.dart


  late final _zmq_msg_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<zmq_msg_t>)>>('zmq_msg_data');
  late final _zmq_msg_data = _zmq_msg_dataPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<zmq_msg_t>)>();

  int zmq_msg_size(
    ffi.Pointer<zmq_msg_t> msg_,
  ) {
    return _zmq_msg_size(
      msg_,
    );
  }

  late final _zmq_msg_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<zmq_msg_t>)>>(
          'zmq_msg_size');
  late final _zmq_msg_size =
      _zmq_msg_sizePtr.asFunction<int Function(ffi.Pointer<zmq_msg_t>)>();

  int zmq_msg_more(
    ffi.Pointer<zmq_msg_t> msg_,
  ) {
    return _zmq_msg_more(
      msg_,
    );
  }

  late final _zmq_msg_morePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<zmq_msg_t>)>>(
          'zmq_msg_more');
  late final _zmq_msg_more =
      _zmq_msg_morePtr.asFunction<int Function(ffi.Pointer<zmq_msg_t>)>();

  int zmq_msg_get(
    ffi.Pointer<zmq_msg_t> msg_,
    int property_,
  ) {
    return _zmq_msg_get(
      msg_,
      property_,
    );
  }

  late final _zmq_msg_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<zmq_msg_t>, ffi.Int)>>('zmq_msg_get');
  late final _zmq_msg_get =
      _zmq_msg_getPtr.asFunction<int Function(ffi.Pointer<zmq_msg_t>, int)>();

  int zmq_msg_set(
    ffi.Pointer<zmq_msg_t> msg_,
    int property_,
    int optval_,
  ) {
    return _zmq_msg_set(
      msg_,
      property_,
      optval_,
    );
  }

  late final _zmq_msg_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zmq_msg_t>, ffi.Int, ffi.Int)>>('zmq_msg_set');
  late final _zmq_msg_set = _zmq_msg_setPtr
      .asFunction<int Function(ffi.Pointer<zmq_msg_t>, int, int)>();

  ffi.Pointer<ffi.Char> zmq_msg_gets(
    ffi.Pointer<zmq_msg_t> msg_,
    ffi.Pointer<ffi.Char> property_,
  ) {
    return _zmq_msg_gets(
      msg_,
      property_,
    );
  }

  late final _zmq_msg_getsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<zmq_msg_t>, ffi.Pointer<ffi.Char>)>>('zmq_msg_gets');
  late final _zmq_msg_gets = _zmq_msg_getsPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<zmq_msg_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Void> zmq_socket(
    ffi.Pointer<ffi.Void> arg0,
    int type_,
  ) {
    return _zmq_socket(
      arg0,
      type_,
    );
  }

  late final _zmq_socketPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Int)>>('zmq_socket');
  late final _zmq_socket = _zmq_socketPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  int zmq_close(
    ffi.Pointer<ffi.Void> s_,
  ) {
    return _zmq_close(
      s_,
    );
  }

  late final _zmq_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_close');
  late final _zmq_close =
      _zmq_closePtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int zmq_setsockopt(
    ffi.Pointer<ffi.Void> s_,
    int option_,
    ffi.Pointer<ffi.Void> optval_,
    int optvallen_,
  ) {
    return _zmq_setsockopt(
      s_,
      option_,
      optval_,
      optvallen_,
    );
  }

  late final _zmq_setsockoptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int,
              ffi.Pointer<ffi.Void>, ffi.Size)>>('zmq_setsockopt');
  late final _zmq_setsockopt = _zmq_setsockoptPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Void>, int)>();

  int zmq_getsockopt(
    ffi.Pointer<ffi.Void> s_,
    int option_,
    ffi.Pointer<ffi.Void> optval_,
    ffi.Pointer<ffi.Size> optvallen_,
  ) {
    return _zmq_getsockopt(
      s_,
      option_,
      optval_,
      optvallen_,
    );
  }

  late final _zmq_getsockoptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int,
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Size>)>>('zmq_getsockopt');
  late final _zmq_getsockopt = _zmq_getsockoptPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Size>)>();

  int zmq_bind(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<ffi.Char> addr_,
  ) {
    return _zmq_bind(
      s_,
      addr_,
    );
  }

  late final _zmq_bindPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>('zmq_bind');
  late final _zmq_bind = _zmq_bindPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int zmq_connect(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<ffi.Char> addr_,
  ) {
    return _zmq_connect(
      s_,
      addr_,
    );
  }

  late final _zmq_connectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>('zmq_connect');
  late final _zmq_connect = _zmq_connectPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int zmq_unbind(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<ffi.Char> addr_,
  ) {
    return _zmq_unbind(
      s_,
      addr_,
    );
  }

  late final _zmq_unbindPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>('zmq_unbind');
  late final _zmq_unbind = _zmq_unbindPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int zmq_disconnect(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<ffi.Char> addr_,
  ) {
    return _zmq_disconnect(
      s_,
      addr_,
    );
  }

  late final _zmq_disconnectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>('zmq_disconnect');
  late final _zmq_disconnect = _zmq_disconnectPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int zmq_send(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<ffi.Void> buf_,
    int len_,
    int flags_,
  ) {
    return _zmq_send(
      s_,
      buf_,
      len_,
      flags_,
    );
  }

  late final _zmq_sendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Size, ffi.Int)>>('zmq_send');
  late final _zmq_send = _zmq_sendPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, int, int)>();

  int zmq_send_const(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<ffi.Void> buf_,
    int len_,
    int flags_,
  ) {
    return _zmq_send_const(
      s_,
      buf_,
      len_,
      flags_,
    );
  }

  late final _zmq_send_constPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Size, ffi.Int)>>('zmq_send_const');
  late final _zmq_send_const = _zmq_send_constPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, int, int)>();

  int zmq_recv(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<ffi.Void> buf_,
    int len_,
    int flags_,
  ) {
    return _zmq_recv(
      s_,
      buf_,
      len_,
      flags_,
    );
  }

  late final _zmq_recvPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Size, ffi.Int)>>('zmq_recv');
  late final _zmq_recv = _zmq_recvPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, int, int)>();

  int zmq_socket_monitor(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<ffi.Char> addr_,
    int events_,
  ) {
    return _zmq_socket_monitor(
      s_,
      addr_,
      events_,
    );
  }

  late final _zmq_socket_monitorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('zmq_socket_monitor');
  late final _zmq_socket_monitor = _zmq_socket_monitorPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)>();

  int zmq_poll(
    ffi.Pointer<zmq_pollitem_t> items_,
    int nitems_,
    int timeout_,
  ) {
    return _zmq_poll(
      items_,
      nitems_,
      timeout_,
    );
  }

  late final _zmq_pollPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<zmq_pollitem_t>, ffi.Int, ffi.Long)>>('zmq_poll');
  late final _zmq_poll = _zmq_pollPtr
      .asFunction<int Function(ffi.Pointer<zmq_pollitem_t>, int, int)>();

  /// /
  int zmq_proxy(
    ffi.Pointer<ffi.Void> frontend_,
    ffi.Pointer<ffi.Void> backend_,
    ffi.Pointer<ffi.Void> capture_,
  ) {
    return _zmq_proxy(
      frontend_,
      backend_,
      capture_,
    );
  }

  late final _zmq_proxyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>)>>('zmq_proxy');
  late final _zmq_proxy = _zmq_proxyPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Void>)>();

  int zmq_proxy_steerable(
    ffi.Pointer<ffi.Void> frontend_,
    ffi.Pointer<ffi.Void> backend_,
    ffi.Pointer<ffi.Void> capture_,
    ffi.Pointer<ffi.Void> control_,
  ) {
    return _zmq_proxy_steerable(
      frontend_,
      backend_,
      capture_,
      control_,
    );
  }

  late final _zmq_proxy_steerablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>)>>('zmq_proxy_steerable');
  late final _zmq_proxy_steerable = _zmq_proxy_steerablePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int zmq_has(
    ffi.Pointer<ffi.Char> capability_,
  ) {
    return _zmq_has(
      capability_,
    );
  }

  late final _zmq_hasPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'zmq_has');
  late final _zmq_has =
      _zmq_hasPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int zmq_device(
    int type_,
    ffi.Pointer<ffi.Void> frontend_,
    ffi.Pointer<ffi.Void> backend_,
  ) {
    return _zmq_device(
      type_,
      frontend_,
      backend_,
    );
  }

  late final _zmq_devicePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>)>>('zmq_device');
  late final _zmq_device = _zmq_devicePtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int zmq_sendmsg(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<zmq_msg_t> msg_,
    int flags_,
  ) {
    return _zmq_sendmsg(
      s_,
      msg_,
      flags_,
    );
  }

  late final _zmq_sendmsgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<zmq_msg_t>,
              ffi.Int)>>('zmq_sendmsg');
  late final _zmq_sendmsg = _zmq_sendmsgPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<zmq_msg_t>, int)>();

  int zmq_recvmsg(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<zmq_msg_t> msg_,
    int flags_,
  ) {
    return _zmq_recvmsg(
      s_,
      msg_,
      flags_,
    );
  }

  late final _zmq_recvmsgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<zmq_msg_t>,
              ffi.Int)>>('zmq_recvmsg');
  late final _zmq_recvmsg = _zmq_recvmsgPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<zmq_msg_t>, int)>();
